#3 Setup Search Input and Header,Main,Footer heights to avoid overlapping

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -16,4 +16,8 @@ $color-brown-light: #6D5D4B;
 $color-white: #fff;
 $color-black: #000;
 
+$color-gray: #999;
+$color-gray-light: #f4f2f2;
+$color-gray-dark: #333;
+
 $font-raleway: "Raleway", sans-serif;
