--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   color: $color-brown;
+  height: 5.5rem;
 
   %highlight {
     color: darken($color-brown, 5%);
