--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  height: 6rem;
 
   &__logo {
     background-color: red;
